c/examples/gcc/testsuite/c-c++-common/gomp/nothing-2.c
#pragma omp nothing ,		/* { dg-error "expected end of line before" } */
#pragma omp nothing asdf	/* { dg-error "expected end of line before" } */
